--- a/packages/backend/project.json
+++ b/packages/backend/project.json
@@ -15,13 +15,7 @@
         "production": {
           "optimization": true,
           "extractLicenses": true,
-          "inspect": false,
-          "fileReplacements": [
-            {
-              "replace": "packages/backend/src/environments/environment.ts",
-              "with": "packages/backend/src/environments/environment.prod.ts"
-            }
-          ]
+          "inspect": false
         }
       }
     },
