--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/react-dom": "18.0.0",
     "@types/react-is": "17.0.3",
     "@types/styled-components": "5.1.25",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "~5.18.0",
     "@typescript-eslint/parser": "~5.18.0",
     "babel-jest": "27.5.1",
@@ -56,6 +57,7 @@
     "nx": "14.0.3",
     "prettier": "^2.5.1",
     "react-test-renderer": "18.0.0",
+    "supertest": "^6.2.3",
     "ts-jest": "27.1.4",
     "ts-node": "9.1.1",
     "typescript": "~4.6.2"
