--- a/package.json
+++ b/package.json
@@ -20,18 +20,18 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@nrwl/cli": "14.0.3",
-    "@nrwl/cypress": "14.0.3",
-    "@nrwl/eslint-plugin-nx": "14.0.3",
-    "@nrwl/express": "^14.0.3",
-    "@nrwl/jest": "14.0.3",
-    "@nrwl/js": "14.0.3",
-    "@nrwl/linter": "14.0.3",
-    "@nrwl/node": "14.0.3",
-    "@nrwl/nx-cloud": "latest",
-    "@nrwl/react": "^14.0.3",
-    "@nrwl/web": "14.0.3",
-    "@nrwl/workspace": "14.0.3",
+    "@nrwl/cli": "14.0.5",
+    "@nrwl/cypress": "14.0.5",
+    "@nrwl/eslint-plugin-nx": "14.0.5",
+    "@nrwl/express": "14.0.5",
+    "@nrwl/jest": "14.0.5",
+    "@nrwl/js": "14.0.5",
+    "@nrwl/linter": "14.0.5",
+    "@nrwl/node": "14.0.5",
+    "@nrwl/nx-cloud": "14.0.1",
+    "@nrwl/react": "14.0.5",
+    "@nrwl/web": "14.0.5",
+    "@nrwl/workspace": "14.0.5",
     "@testing-library/react": "13.1.1",
     "@types/express": "4.17.13",
     "@types/jest": "27.4.1",
@@ -54,7 +54,7 @@
     "eslint-plugin-react": "7.29.4",
     "eslint-plugin-react-hooks": "4.4.0",
     "jest": "27.5.1",
-    "nx": "14.0.3",
+    "nx": "14.0.5",
     "prettier": "^2.5.1",
     "react-test-renderer": "18.0.0",
     "supertest": "^6.2.3",
