--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "express": "4.17.2",
+    "helmet": "^5.0.2",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-is": "18.0.0",
