style(backend): proper types for public api

--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "license": "MIT",
   "scripts": {
     "backend:serve": "nx serve backend",
+    "backend:test": "nx test backend",
     "frontend:serve": "nx serve frontend",
+    "frontend:test": "nx test frontend",
     "all:serve": "nx run-many --target serve --all",
+    "all:test": "nx run-many --target test --all",
     "all:build": "nx run-many --target build --all"
   },
   "private": true,
