feat(backend): cors middleware

--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,4 @@
-BACKEND_PORT=3456
-FRONTEND_TITLE=Construkt
+NX_BACKEND_PORT=3456
+NX_BACKEND_ALLOWED_HOSTS=*
+NX_FRONTEND_TITLE=Construkt
+NX_FRONTEND_API_HOST=//localhost:3456/api
