--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-is": "18.0.0",
     "regenerator-runtime": "0.13.7",
     "styled-components": "5.3.5",
+    "styled-reset": "^4.3.4",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
