feat(all): e2e tests

--- a/.env.local
+++ b/.env.local
@@ -2,3 +2,4 @@ NX_BACKEND_PORT=3456
 NX_BACKEND_ALLOWED_HOSTS=*
 NX_FRONTEND_TITLE=Construkt
 NX_FRONTEND_API_HOST=//localhost:3456/api
+NX_FRONTEND_APP_URL=http://localhost:4200
