--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "backend:test": "nx test backend",
     "frontend:serve": "nx serve frontend",
     "frontend:test": "nx test frontend",
+    "e2e:start": "cd ./packages/frontend-e2e && cypress open",
     "all:serve": "nx run-many --target serve --all",
     "all:test": "nx run-many --target test --all",
     "all:build": "nx run-many --target build --all"
@@ -16,6 +17,7 @@
     "core-js": "^3.6.5",
     "express": "4.17.2",
     "helmet": "^5.0.2",
+    "lodash.debounce": "^4.0.8",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-is": "18.0.0",
@@ -40,6 +42,7 @@
     "@testing-library/react": "13.1.1",
     "@types/express": "4.17.13",
     "@types/jest": "27.4.1",
+    "@types/lodash.debounce": "^4.0.7",
     "@types/node": "16.11.7",
     "@types/react": "18.0.1",
     "@types/react-dom": "18.0.0",
