--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "scripts": {
     "backend:serve": "nx serve backend",
     "backend:test": "nx test backend",
+    "backend:build": "nx build backend",
     "frontend:serve": "nx serve frontend",
     "frontend:test": "nx test frontend",
+    "frontend:build": "nx build frontend",
     "e2e:start": "cd ./packages/frontend-e2e && cypress open",
     "all:serve": "nx run-many --target serve --all",
     "all:test": "nx run-many --target test --all",
@@ -21,34 +23,34 @@
     "express": "4.17.2",
     "helmet": "^5.0.2",
     "lodash.debounce": "^4.0.8",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "react-is": "18.0.0",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-is": "18.1.0",
     "regenerator-runtime": "0.13.7",
     "styled-components": "5.3.5",
     "styled-reset": "^4.3.4",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@nrwl/cli": "14.0.5",
-    "@nrwl/cypress": "14.0.5",
-    "@nrwl/eslint-plugin-nx": "14.0.5",
-    "@nrwl/express": "14.0.5",
-    "@nrwl/jest": "14.0.5",
-    "@nrwl/js": "14.0.5",
-    "@nrwl/linter": "14.0.5",
-    "@nrwl/node": "14.0.5",
-    "@nrwl/nx-cloud": "14.0.1",
-    "@nrwl/react": "14.0.5",
-    "@nrwl/web": "14.0.5",
-    "@nrwl/workspace": "14.0.5",
+    "@nrwl/cli": "14.1.1",
+    "@nrwl/cypress": "14.1.1",
+    "@nrwl/eslint-plugin-nx": "14.1.1",
+    "@nrwl/express": "14.1.1",
+    "@nrwl/jest": "14.1.1",
+    "@nrwl/js": "14.1.1",
+    "@nrwl/linter": "14.1.1",
+    "@nrwl/node": "14.1.1",
+    "@nrwl/nx-cloud": "14.0.3",
+    "@nrwl/react": "14.1.1",
+    "@nrwl/web": "14.1.1",
+    "@nrwl/workspace": "14.1.1",
     "@testing-library/react": "13.1.1",
     "@types/express": "4.17.13",
     "@types/jest": "27.4.1",
     "@types/lodash.debounce": "^4.0.7",
     "@types/node": "16.11.7",
-    "@types/react": "18.0.1",
-    "@types/react-dom": "18.0.0",
+    "@types/react": "18.0.8",
+    "@types/react-dom": "18.0.3",
     "@types/react-is": "17.0.3",
     "@types/styled-components": "5.1.25",
     "@types/supertest": "^2.0.12",
@@ -63,11 +65,11 @@
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-react": "7.29.4",
-    "eslint-plugin-react-hooks": "4.4.0",
+    "eslint-plugin-react-hooks": "4.5.0",
     "jest": "27.5.1",
-    "nx": "14.0.5",
+    "nx": "14.1.1",
     "prettier": "^2.5.1",
-    "react-test-renderer": "18.0.0",
+    "react-test-renderer": "18.1.0",
     "supertest": "^6.2.3",
     "ts-jest": "27.1.4",
     "ts-node": "9.1.1",
